adding explanatory markdown text

--- a/eds241_assignment4.Rmd
+++ b/eds241_assignment4.Rmd
@@ -51,7 +51,7 @@ options(scipen=999) # not scientific notation
 
 # Read in Sardines Data
 
-```{r}
+```{r read csv}
 sardines <- read.csv(here("data","EU_sardines.csv"))
 ```
 
