--- a/eds241_assignment4.Rmd
+++ b/eds241_assignment4.Rmd
@@ -59,9 +59,10 @@ sardines <- read.csv(here("data","EU_sardines.csv"))
 
 # Homework Questions
 
-## a.) Estimate a bivariate regression of log(volume_sold_kg) on log(price euro_kg). What is the price elasticity of demand for sardines? Test the null hypothesis that the price elasticity is equal to -1.
+## a.) Estimate a bivariate regression of log(volume_sold_kg) on log(price euro_kg). What is the price elasticity of demand for sardines? Test the nullhypothesis that the price elasticity is equal to -1.
 
-The code chunk below adds a variable to the `sardines` dataset that is the log of the price in Euros per kilogram of sardines.  
+The code chunk below adds a variable to the `sardines` dataset that is the log 
+of the price in Euros per kilogram of sardines.  
 
 ```{r a.1.) log transformations}
 #transform  variables to generate log values 
@@ -70,7 +71,7 @@ sardines <- sardines %>%
          log_price_euro_kg = log(price_euro_kg))
 ```
 
-The code chunk below runs a regression of `log_price_euro_kg` on `log_vol_sold_kg`. 
+The code chunk below runs a regression of `log_price_euro_kg` on `log_vol_sold_kg` and formats the output in a table. 
 
 ```{r a.2.) linear regression}
 vol_on_price <- lm_robust(log_vol_sold_kg ~ log_price_euro_kg, data = sardines)
@@ -84,13 +85,17 @@ vol_on_price_table %>%
   kable()
 ```
 
-Based on the confidence interval for the linear regression, we can say with 95% confidence that the coefficient on volume sold in kilograms, price elasticity (beta 1) is contained by the range -1.69 and -1.39. This means we can reject the null hypothesis that price elasticity is equal to -1. 
+The code chunk below tests the null hypothesis that the price elasticity is equal to -1. 
+
+```{r}
+linearHypothesis(vol_on_price, c("log_price_euro_kg = -1"), white.adjust = "hc2")
+```
+
+Based on the confidence interval for the linear regression, we can say with 95% confidence that the coefficient on volume sold in kilograms, price elasticity (beta 1) is contained by the range -1.69 and -1.39. Also, our linear hypothesis This means we can reject the null hypothesis that price elasticity is equal to -1. 
 
 \newpage
 
 ## b.) Like in Lecture 8 (see the IV.R script), we will use wind_m_s as an instrument for log(price_euro_kg). To begin, estimate the first-stage regression relating log(price_euro_kg) to wind_m_s. Interpret the estimated coefficient on wind speed. Does it have the expected sign? Also test for the relevance of the instrument and whether it is a “weak” instrument by reporting the proper F-statistic.
-
-The code chunk below 
 
 ```{r b.1.) linear regression}
 #first stage regression
@@ -137,7 +142,9 @@ The estimated price elasticity of demand for sardines is -1.09.
 ## d.) Repeat the exercise in (c), but include fixed effects for each year, month, and country. [Hint: you can use the command “as.factor(country) + as.factor(year) +as.factor(month)” to the ivreg function in R]. Report the estimated price elasticity of demand and the F-statistic testing for relevant and non-weak instruments.
 
 ```{r}
-tsls2 <- ivreg(log_vol_sold_kg ~ log_price_euro_kg + as.factor(country) + as.factor(year) + as.factor(month) | as.factor(country) + as.factor(year) + as.factor(month) + wind_m_s, data = sardines)
+tsls2 <- ivreg(log_vol_sold_kg ~ log_price_euro_kg + as.factor(country) +
+                 as.factor(year) + as.factor(month) | as.factor(country) +
+                 as.factor(year) + as.factor(month) + wind_m_s, data = sardines)
 
 summary(tsls2)
 ```
